--- a/labs/lab02/presentation/presentation.qmd
+++ b/labs/lab02/presentation/presentation.qmd
@@ -3,27 +3,30 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
+  name: Бызова Мария Олеговна
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: Отчет по лабораторной работе № 2
+subtitle: Настройка DNS-сервера
 license: CC BY
-date: 1970-01-01
+date: 2025-09-05
+
 ## Generic options
 lang: ru-RU
 crossref:
   lof-title: Список иллюстраций
   lot-title: Список таблиц
   lol-title: Листинги
+
+## Fonts 
+mainfont: PT Serif 
+romanfont: PT Serif 
+sansfont: PT Sans 
+monofont: PT Mono 
+mainfontoptions: Ligatures=TeX 
+romanfontoptions: Ligatures=TeX 
+sansfontoptions: Ligatures=TeX,Scale=MatchLowercase 
+monofontoptions: Scale=MatchLowercase,Scale=0.9
+
 ## Formats
 format:
 ### Pdf output format
@@ -38,9 +41,12 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
+    pdf-engine: xelatex
+    fontenc: T2A
 #### Language
     babel-lang: russian
     babel-otherlangs: english
+
 ### Html output
   revealjs:
     transition: slide
@@ -51,182 +57,196 @@ format:
     logo: _resources/image/logo_rudn.png
 ---
 
-# Информация
+# Цель работы
 
-## Докладчик
-
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
-
-# Вводная часть
-
-## Актуальность
-
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
-
-## Объект и предмет исследования
-
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
-
-## Цели и задачи
-
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
-
-## Материалы и методы
-
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
-
-# Создание презентации
-
-## Процессор `pandoc`
-
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
-
-## Формат `pdf`
-
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
-
-## Код для формата `pdf`
-
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
-
-## Формат `html`
-
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
-
-## Код для формата `html`
-
-- Тема задаётся в файле `Makefile`
-
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
-
-## Получающиеся форматы
-
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
-
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+Целью данной работы является приобретение практических навыков по установке и конфигурированию DNS-сервера, усвоение принципов работы системы доменных имён.
 
 
-## Итоговый слайд
+# Установка DNS-сервера
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+Загрузим нашу операционную систему и перейдем в рабочий каталог с проектом. Далее запустим виртуальную машину server рис 1).
 
-# Рекомендую
+![Открытие рабочего каталога с проектом и запуск виртуальной машины server.](image/1.PNG){#fig-001 width=70%}
 
-## Принцип 10/20/30
+# Установка DNS-сервера
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+На виртуальной машине server войдём под созданным нами в предыдущей работе пользователем и откроем терминал. Перейдём в режим суперпользователя и установим bind и bind-utils (рис. 2).
 
-## Связь слайдов
+![Переход в режим суперпользователя и установка bind,bind-utils.](image/2.PNG){#fig-002 width=70%}
 
-::: incremental
+# Установка DNS-сервера
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+С помощью утилиты dig сделаем запрос к DNSадресу www.yandex.ru (рис. 3).
 
-:::
+![Запрос с помощью утилиты dig.](image/3.PNG){#fig-003 width=70%}
 
-## Количество сущностей
+# Конфигурирование кэширующего DNS-сервера
 
-::: incremental
+Просмотрим содержание файлов /etc/resolv.conf, /etc/named.conf, /var/named/named.ca, /var/named/named.localhost, /var/named/named.loopback (рис. 4 - рис. 8).
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+# Конфигурирование кэширующего DNS-сервера
 
-:::
+![Просмотр содержания файла /etc/resolv.conf.](image/4.PNG){#fig-004 width=70%}
 
-## Общие рекомендации
+# Конфигурирование кэширующего DNS-сервера
 
-::: incremental
+![Просмотр содержания файла /etc/named.conf.](image/5.PNG){#fig-005 width=70%}
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+# Конфигурирование кэширующего DNS-сервера
 
-:::
+![Просмотр содержания файла /var/named/named.ca.](image/6.PNG){#fig-006 width=70%}
 
-## Представление данных
+# Конфигурирование кэширующего DNS-сервера
 
-::: incremental
+![Просмотр содержания файла /var/named/named.localhost.](image/7.PNG){#fig-007 width=70%}
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+# Конфигурирование кэширующего DNS-сервера
 
-:::
+![Просмотр содержания файла /var/named/named.loopback.](image/8.PNG){#fig-008 width=70%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+Запустим DNS-сервер. Включим запуск DNS-сервера в автозапуск при загрузке системы. Проанализируем отличие в выведенной на экран информации при выполнении команд: dig www.yandex.ru (рис. 9). и dig @127.0.0.1 www.yandex.ru (рис. 10). 
+
+![Запуск DNS-сервера, включение запуска DNS-сервера в автозапуск при загрузке системы, анализ выведенной на экран информации при выполнении команды dig www.yandex.ru.](image/9.PNG){#fig-009 width=40%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+![Анализ выведенной на экран информации при выполнении команды dig @127.0.0.1 www.yandex.ru.](image/10.PNG){#fig-010 width=40%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+Сделаем DNS-сервер сервером по умолчанию для хоста server и внутренней виртуальной сети. Для этого изменим настройки сетевого соединения eth0 в NetworkManager, переключив его на работу с внутренней сетью и указав для него в качестве DNS-сервера по умолчанию адрес 127.0.0.1 (рис. 11).
+
+![Настройка DNS-сервера сервером по умолчанию для хоста server и внутренней виртуальной сети.](image/11.PNG){#fig-011 width=40%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+Перезапустим NetworkManager. Проверим наличие изменений в файле /etc/resolv.conf (рис. 12).
+
+![Перезапуск NetworkManager и проверка наличия изменений в файле /etc/resolv.conf.](image/12.PNG){#fig-012 width=70%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+Теперь нам требуется настроить направление DNS-запросов от всех узлов внутренней сети, включая запросы от узла server, через узел server. Для этого внесём изменения в файл /etc/named.conf (рис. 13).
+
+![Настройка направление DNS-запросов от всех узлов внутренней сети, включая запросы от узла server, через узел server.](image/13.PNG){#fig-013 width=70%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+Внесём изменения в настройки межсетевого экрана узла server, разрешив работу с DNS: firewall-cmd --add-service=dns firewall-cmd --add-service=dns --permanent. Убедимся, что DNS-запросы идут через узел server, который прослушивает порт 53. Для этого на данном этапе используем команду lsof | grep UDP (рис. 14).
+
+![Внос изменений в настройки межсетевого экрана узла server, разрешив работу с DNS. Проверка, что DNS-запросы идут через узел server, который прослушивает порт 53.](image/14.PNG){#fig-014 width=40%}
+
+# Конфигурирование кэширующего DNS-сервера
+
+В случае возникновения в сети ситуации, когда DNS-запросы от сервера фильтруются сетевым оборудованием, следует добавить перенаправление DNS-запросов на конкретный вышестоящий DNS-сервер. Для этого в конфигурационный файл named.conf в секцию options добавим: forwarders { список DNS-серверов }; forward first; Кроме того, возможно вышестоящий DNS-сервер может не поддерживать технологию DNSSEC, тогда в конфигурационном файле named.conf укажем следующие настройки (рис. 15).
+
+# Конфигурирование кэширующего DNS-сервера
+
+![Добавление перенаправлений DNS-запросов на конкретный вышестоящий DNS-сервер и дополнительных настроек](image/15.PNG){#fig-015 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Скопируем шаблон описания DNS-зон named.rfc1912.zones из каталога /etc в каталог /etc/named и переименуем его в mobihzova.net (рис. 16).
+
+![Копирование шаблона описания DNS-зон из каталога /etc в каталог /etc/named и изменение его названия.](image/16.PNG){#fig-016 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Включим файл описания зоны /etc/named/mobihzova.net в конфигурационном файле DNS /etc/named.conf, добавив в нём в конце строку include "/etc/named/mobihzova.net" (рис. 17).
+
+![Включение файла описания зоны /etc/named/mobihzova.net в конфигурационном файле DNS /etc/named.conf.](image/17.PNG){#fig-017 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Откроем файл /etc/named/mobihzova.net на редактирование и вместо зоны пропишем свою прямую зону. Далее, вместо зоны пропишем свою обратную зону. Остальные записи в файле /etc/named/mobihzova.net удалим (рис. 18).
+
+![Открытие файла /etc/named/mobihzova.net на редактирование. Прописывание своей прямой зоны, обратной зоны и удаление остальных записей в файле.](image/18.PNG){#fig-018 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+В каталоге /var/named создадим подкаталоги master/fz и master/rz, в которых будут располагаться файлы прямой и обратной зоны соответственно (рис 19).
+
+![В каталоге /var/named создание подкаталогов master/fz и master/rz.](image/19.PNG){#fig-019 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Скопируем шаблон прямой DNS-зоны named.localhost из каталога /var/named в каталог /var/named/master/fz и переименуем его в mobihzova.net (рис. 20).
+
+![Копирование шаблона прямой DNS-зоны named.localhost из каталога /var/named в каталог /var/named/master/fz и изменение его названия.](image/20.PNG){#fig-020 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Изменим файл /var/named/master/fz/mobihzova.net, указав необходимые DNS записи для прямой зоны. В этом файле DNS-имя сервера @ rname.invalid. заменим на @ server.mobihzova.net. Формат серийного номера ГГГГММДДВВ (ГГГГ — год, ММ — месяц, ДД — день, ВВ — номер ревизии) [1]; адрес в A- заменим с 127.0.0.1 на 192.168.1.1; в директиве $ORIGIN зададим текущее имя домена mobihzova.net, а затем укажем имена и адреса серверов в этом домене в виде A-записей DNS (на данном этапе пропишем сервер с именем ns и адресом 192.168.1.1) (рис. 21).
+
+# Конфигурирование первичного DNS-сервера
+
+![Изменение файла /var/named/master/fz/mobihzova.net, указав необходимые DNS записи для прямой зоны.](image/21.PNG){#fig-021 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Скопируем шаблон обратной DNS-зоны named.loopback из каталога /var/named в каталог /var/named/master/rz и переименуем его в 192.168.1 (рис. 22).
+
+![Копирование шаблона обратной DNS-зоны named.loopback из каталога /var/named в каталог /var/named/master/rz и изменение его названия.](image/22.PNG){#fig-022 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Изменим файл /var/named/master/rz/192.168.1, указав необходимые DNS записи для обратной зоны. В этом файле DNS-имя сервера @ rname.invalid заменим на @ server.mobihzova.net. формат серийного номера ГГГГММДДВВ (ГГГГ — год, ММ — месяц, ДД — день, ВВ — номер ревизии); адрес в A-записи заменим с 127.0.0.1 на 192.168.1.1; в директиве $ORIGIN зададим название обратной зоны в виде 1.168.192.in-addr.arpa., затем зададим PTR-записи (на данном этапе зададим PTR запись, ставящая в соответствие адресу 192.168.1.1 DNS-адрес ns.mobihzova.net) (рис. 23).
+
+# Конфигурирование первичного DNS-сервера
+
+![Изменение файла /var/named/master/rz/192.168.1, указав необходимые DNS записи для обратной зоны.](image/23.PNG){#fig-023 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+Далее исправим права доступа к файлам в каталогах /etc/named и /var/named, чтобы демон named мог с ними работать. В системах с запущенным SELinux все процессы и файлы имеют специальные метки безопасности (так называемый «контекст безопасности»), используемые системой для принятия решений по доступу к этим процессам и файлам. После изменения доступа к конфигурационным файлам named требуется корректно восстановить их метки в SELinux. Для проверки состояния переключателей SELinux, относящихся к named, введём: getsebool -a | grep named. Теперь дадим named разрешение на запись в файлы DNS-зоны. В дополнительном терминале запустим в режиме реального времени расширенный лог системных сообщений, чтобы проверить корректность работы системы и в первом терминале перезапустим DNS-сервер (рис. 24 - рис. 25).
+
+# Конфигурирование первичного DNS-сервера
+
+![Исправление прав доступа к файлам в каталогах /etc/named и /var/named, корректное восстановление их меток в SELinux, проверка состояния переключателей SELinux и перезапуск DNS-сервера.](image/24.PNG){#fig-024 width=70%}
+
+# Конфигурирование первичного DNS-сервера
+
+![Проверка корректности работы системы.](image/25.PNG){#fig-025 width=70%}
+
+# Анализ работы DNS-сервера
+
+При помощи утилиты dig получим описание DNS-зоны с сервера ns.mobihzova.net (рис. 26).
+
+![Получение описания DNS-зоны с сервера ns.mobihzova.net.](image/26.PNG){#fig-026 width=40%}
+
+# Анализ работы DNS-сервера
+
+При помощи утилиты host проанализируем корректность работы DNS-сервера (рис. 27).
+
+![Анализ корректности работы DNS-сервера.](image/27.PNG){#fig-027 width=70%}
+
+# Внесение изменений в настройки внутреннего окружения виртуальной машины
+
+На виртуальной машине server перейдём в каталог для внесения изменений в настройки внутреннего окружения /vagrant/provision/server/, создадим в нём каталог dns, в который поместим в соответствующие каталоги конфигурационные файлы DNS (рис. 28).
+
+![Переход в каталог для внесения изменений в настройки внутреннего окружения /vagrant/provision/server/, создание в нём каталога dns, в который помещаем в соответствующие каталоги конфигурационные файлы DNS.](image/28.PNG){#fig-028 width=70%}
+
+# Внесение изменений в настройки внутреннего окружения виртуальной машины
+
+В каталоге /vagrant/provision/server создадим исполняемый файл dns.sh (рис. 29).
+
+![Создание в каталоге /vagrant/provision/server исполняемого файла dns.sh.](image/29.PNG){#fig-029 width=70%}
+
+# Внесение изменений в настройки внутреннего окружения виртуальной машины
+
+Откроем его на редактирование и пропишем в нём следующий скрипт (приведён в лабораторной работе). Этот скрипт, по сути, повторяет произведённые нами действия по установке и настройке DNS-сервера (рис. 30).
+
+![Открытие файла на редактирование и прописывание в нём скрипта.](image/30.PNG){#fig-030 width=70%}
+
+# Внесение изменений в настройки внутреннего окружения виртуальной машины
+
+Для отработки созданного скрипта во время загрузки виртуальной машины server в конфигурационном файле Vagrantfile добавим определённые параметры в разделе конфигурации для сервера (рис. 31).
+
+![Добавление параметров в конфигурационном файле Vagrantfile в разделе конфигурации для сервера.](image/31.PNG){#fig-031 width=70%}
+
+# Выводы
+
+В ходе выполнения лабораторной работы были приобретены практические навыки по установке и конфигурированию DNS-сервера, а также усвоили принципы работы системы доменных имён.
+
